--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <td class="contacttd"><a href ="https://www.instagram.com/t1lol/">https://www.instagram.com/t1lol/</a></td>
           </tr>
           <tr>
-            <td class="contacttdicon"><a href ="https://www.facebook.com/T1LoL/"><button type ="button"><img src="facebook.jpg" width="80em" height="80em"></button></a></td>
+            <td class="contacttdicon"><a href ="https://www.facebook.com/T1LoL/"><button type ="button"><img src="twitter.png" width="80em" height="80em"></button></a></td>
             <td class="contacttd"><a href ="https://twitter.com/T1LoL">https://twitter.com/T1LoL</a></td>
           </tr>
           <tr>
